# starter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Instancenetwork.mdx  Kentuckyballistics  LICENSE  LICENSE.mdx  README.md  REPRO.md  TODO.md  about-truf-network.mdx  abstract.mdx  ai-toolkit.mdx  api-reference.mdx  arquitetura.mdx  auth.mdx  authentication-authorization.mdx  authentication.mdx  barramento.mdx  billing.mdx  bounties-overview.mdx  bug-report.mdx  changelog.mdx  concepts.mdx  create-claude-user.sh  customize-layout.js  data-consumer-guide.mdx  data-lake.mdx  data-provider-guide.mdx  data-types.mdx  data.mdx  desenvolvimento.mdx  developer-guide.mdx  developers.mdx  development.mdx  (+49 more)
.ai-instructions/: content-review-checklist.md  documentation-guidelines.md  municipal-context-guide.md
.husky/: pre-commit
Features/: introduction.mdx
agentic/: overview.mdx
agents/: avatar.mdx  overview.mdx
ai-tools/: cursor.mdx  index.mdx  windsurf.mdx
api-reference/: bcadastro_openapi.json  index.mdx  introduction.mdx  openapi.json  openapi.yml  openapiLangWatch.json  overview.mdx  quickstart.mdx  rmi_openapi-v3.json  webhooks.mdx
api-specs/: go-openapi.json  (+5 more)
auto-dbt-docs/: README.md  dbt-sources.yml  main.py  pyproject.toml
auto-dbt-docs/rmi/: overview.mdx
auto-dbt-docs/rmi/dados_mestres/: enderecos.mdx  pessoa-fisica.mdx  pessoa-juridica.mdx
auto-dbt-docs/rmi/eventos/: interacoes-pessoa-fisica-prefeitura.mdx
auto-dbt-docs/scripts/: dbt_docs_generator.py  update_navigation.py
(+2036 files in other folders)
